--- a/index.html
+++ b/index.html
@@ -19,4 +19,17 @@
       <p>FreeCodeCamp is a nonprofit community that helps you learn to code.</p>
     </section>
 
-</body>
+    <section class="lesson">
+      <h2 class="title">Contact Info</h2>
+      <ul>
+        <li id="email">
+          <strong>Email:</strong> <a href="mailto:someplace@gmail.com">someplace@gmail.com</a>
+        </li>
+        <li id="github"><strong>GitHub:</strong> <a href="https://github.com/sampleName">sampleName</a></li>
+        <li id="portfolio">
+          <strong>Portfolio:</strong> <a href="#">coming soon</a>
+        </li>
+      </ul>
+    </section>
+  </body>
+</html>
